<resources>
    <string name="app_name">Pet Talks</string>

    <!-- Menu Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu -->
    <string name="menu_camera_demo">Camera/Video</string>
    <string name="menu_cc">CC on/off</string>
    <string name="menu_voice">Voice on/off</string>
    <string name="menu_training_mode">Training mode on/off</string>
    <string name="menu_profile">Setup profile</string>
    <string name="menu_about">About</string>

    <!-- Camera messages -->
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="ads">ads</string>
    <string name="lets_play_and_talk">Lets play and talk!</string>
    <string name="my_name_is_teddy">My name is Teddy.</string>
    <string name="hello">Hello!!!</string>

    <!-- Questions -->
    <string name="q1">Teddy wants to have more! Is it correct?</string>
    <string name="q2">Teddy greets you! Is it correct?</string>
    <string name="q3">Teddy wants to play! Is it correct?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pets_name">Teddy</string>
    <string name="teddy_dog_gmail_com">teddy_dog@gmail.com</string>
    <string name="_1_y_o">1 y.o</string>
    <string name="male">Male</string>
    <string name="lang">English</string>
    <string name="submit">SUBMIT</string>
    <string name="dog">Dog</string>
    <string name="mini_poodle">Mini poodle</string>

    <!-- Dropdown -->
    <string-array name="breeds">
        <item>Mini poodle</item>
        <item>Shepherd</item>
        <item>Akita</item>
    </string-array>

    <string-array name="types">
        <item>Dog</item>
        <item>Cat</item>
    </string-array>

    <string-array name="langs">
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Russian</item>
    </string-array>

</resources>
