<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/indigo_800_overlay" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_mlarge"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="vertical">

            <EditText
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@drawable/edit_text_round_bg_overlay_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:paddingTop="8dp"
                android:text="@string/pets_name"
                android:gravity="left"
                android:textSize="16sp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/select_breed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:minHeight="@dimen/spacing_xmlarge"
                android:editable="false"
                android:focusable="false"
                android:text="@string/mini_poodle"
                android:background="@drawable/edit_text_round_bg_overlay_white"
                android:drawableEnd="@drawable/ic_arrow_drop"
                android:drawableRight="@drawable/ic_arrow_drop"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:textSize="16sp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/select_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:minHeight="@dimen/spacing_xmlarge"
                android:editable="false"
                android:focusable="false"
                android:text="@string/dog"
                android:background="@drawable/edit_text_round_bg_overlay_white"
                android:drawableEnd="@drawable/ic_arrow_drop"
                android:drawableRight="@drawable/ic_arrow_drop"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:textSize="16sp"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/select_age"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_round_bg_overlay_white"
                    android:drawableEnd="@drawable/ic_arrow_drop"
                    android:drawableRight="@drawable/ic_arrow_drop"
                    android:editable="false"
                    android:focusable="false"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    android:text="@string/_1_y_o"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="0dp" />

                <EditText
                    android:id="@+id/select_gender"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_round_bg_overlay_white"
                    android:drawableEnd="@drawable/ic_arrow_drop"
                    android:drawableRight="@drawable/ic_arrow_drop"
                    android:editable="false"
                    android:focusable="false"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    android:text="@string/male"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <EditText
                android:id="@+id/select_language"
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@drawable/edit_text_round_bg_overlay_white"
                android:drawableEnd="@drawable/ic_arrow_drop"
                android:drawableRight="@drawable/ic_arrow_drop"
                android:editable="false"
                android:focusable="false"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:text="@string/lang"
                android:textSize="16sp"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/bt_submit"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@drawable/btn_rect_white_overlay"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>